﻿Change Log
==========

1.0.0
-----

Added
- Parsing API
 - New ITokenisingParser interface which exposes a TokenQueueMode property (CORE-332)
- Global Options - new Options.DefaultTokenQueueMode (CORE-332)
- ConfigurationLoader may now be used in a convinience instance mode (CORE-337)

Changed
- Bug Fixes
 - Fix for one form of AllegroGraphConnector constructor confusing Store and Catalog IDs
 - StoreHandler did not propogate namespaces to all graphs (CORE-334)
 - SPARQL expression parsing could occassionally reject some numeric literals incorrectly (CORE-332)
 - GROUP BY could interact incorrectly with some operators such as VALUES and GRAPH resulting in incorrect results (CORE-336)
 - GRAPH ?g { } was interpreted incorrectly (CORE-336)
 - Fixed a bug where asynchronous UpdateGraph() on Sesame connections would invoke the callback too early
 - Fixed a bug in GROUP_CONCAT where certain values would not be correctly concatenated together (CORE-340)
 - Fixed a corner case bug where the Turtle parser could accept some invalid input and generate incorrect URIs for it (CORE-341)
 - Fixed a bug where certain triple patterns could trigger a bug in the scan logic and explode the solution space (CORE-343)
- Dependencies
 - Upgrade VDS.Common to 1.2.0 which resolves an issue that users may encounter under the VS debugger (CORE-317, CORE-292)
- Documentation
 - Documentation was moved to BitBucket wiki at http://bitbucket.org/dotnetrdf/dotnetrdf/wiki (DOCS-306)
- Core API
 - TreeIndexedTripleCollection now supports completely configurable indices (CORE-309)
- Storage API
 - SesameNativeTemplate is now a public class
 - AllegroGraphConnector now implements IUpdateableStorage and IAsyncUpdateableStorage (CORE-308)

Removed
- Removed defunct TalisException
- Removed defunct internal class InternalXmlWriter
- Marked DydraConnector with an obsolete usable due to continuing inconsistency and transient failures from the Dydra API


0.9.0 RC4
---------

Added
- Ontology API