@@ -33,286 +33,6 @@ using VDS.RDF.Query.Patterns;
 namespace VDS.RDF.Query.Algebra
 {
     /// <summary>
-    /// Represents the Projection step of Query Evaluation
-    /// </summary>
-    [Obsolete("The Project class is no longer used", true)]
-    public class Project 
-        : IUnaryOperator
-    {
-        private ISparqlAlgebra _pattern;
-        private List<SparqlVariable> _variables = new List<SparqlVariable>();
-
-        /// <summary>
-        /// Creates a new Projection
-        /// </summary>
-        /// <param name="pattern">Inner pattern</param>
-        /// <param name="variables">Variables that should be Projected</param>
-        public Project(ISparqlAlgebra pattern, IEnumerable<SparqlVariable> variables)
-        {
-            this._pattern = pattern;
-            this._variables.AddRange(variables);
-        }
-
-        /// <summary>
-        /// Applies the Projection to the results of Evaluating the Inner Pattern
-        /// </summary>
-        /// <param name="context">Evaluation Context</param>
-        /// <returns></returns>
-        public BaseMultiset Evaluate(SparqlEvaluationContext context)
-        {
-            try
-            {
-                context.InputMultiset = context.Evaluate(this._pattern);
-            }
-            catch (RdfQueryTimeoutException)
-            {
-                //If not partial results throw the error
-                if (context.Query == null || !context.Query.PartialResultsOnTimeout) throw;
-            }
-
-            IEnumerable<SparqlVariable> vars;
-            if (context.Query != null)
-            {
-                vars = context.Query.Variables;
-            }
-            else
-            {
-                vars = this._variables;
-            }
-
-            //For Null and Identity Multisets this is just a simple selection
-            if (context.InputMultiset is NullMultiset)
-            {
-                context.InputMultiset = new Multiset(vars.Select(v => v.Name));
-                context.OutputMultiset = context.InputMultiset;
-            }
-            else if (context.InputMultiset is IdentityMultiset)
-            {
-                context.InputMultiset = new Multiset(vars.Select(v => v.Name));
-                Set s = new Set();
-                context.InputMultiset.Add(s);
-                context.OutputMultiset = context.InputMultiset;
-            }
-
-            //If we have a Group Multiset then Projection is more complex
-            GroupMultiset groupSet = null;
-            if (context.InputMultiset is GroupMultiset)
-            {
-                groupSet = (GroupMultiset)context.InputMultiset;
-
-                //Project all simple variables for the Groups here
-                foreach (SparqlVariable v in vars.Where(v => v.IsResultVariable && !v.IsProjection && !v.IsAggregate))
-                {
-                    //Can only project a variable if it's used in the GROUP OR if it was assigned by a GROUP BY expression
-                    if (context.Query != null)
-                    {
-                        if (!groupSet.ContainsVariable(v.Name) && !context.Query.GroupBy.Variables.Contains(v.Name) && !context.Query.GroupBy.ProjectableVariables.Contains(v.Name))
-                        {
-                            throw new RdfQueryException("Cannot project the variable ?" + v.Name + " since this Query contains Grouping(s) but the given Variable is not in the GROUP BY - use the SAMPLE aggregate if you need to sample this Variable");
-                        }
-                    }
-
-                    //Project the value for each variable
-                    if (!groupSet.ContainsVariable(v.Name))
-                    {
-                        //Simple Variable Projection used in GROUP BY so grab first value as all should be same
-                        //for the group
-                        context.OutputMultiset.AddVariable(v.Name);
-                        foreach (int id in groupSet.SetIDs)
-                        {
-                            IEnumerable<int> memberIDs = groupSet.GroupSetIDs(id);
-                            int? setID = (memberIDs.Any() ? memberIDs.First() : (int?)null);
-                            if (setID.HasValue)
-                            {
-                                INode value = groupSet.Contents[setID.Value][v.Name];
-                                context.OutputMultiset[id].Add(v.Name, value);
-                            }
-                        }
-                    }
-                }
-            }
-            else if (context.Query != null && context.Query.IsAggregate)
-            {
-                context.OutputMultiset = new Multiset();
-            }
-
-            //Project the rest of the Variables
-            Set aggSet = new Set();
-            foreach (SparqlVariable v in vars.Where(v => v.IsResultVariable))
-            {
-                if (groupSet == null)
-                {
-                    context.InputMultiset.AddVariable(v.Name);
-                }
-                else
-                {
-                    context.OutputMultiset.AddVariable(v.Name);
-                }
-
-                if (v.IsAggregate)
-                {
-                    //Compute the Aggregate
-                    if (groupSet != null)
-                    {
-                        context.Binder.SetGroupContext(true);
-                        foreach (int id in groupSet.SetIDs)
-                        {
-                            try
-                            {
-                                INode aggValue = v.Aggregate.Apply(context, groupSet.GroupSetIDs(id));
-                                context.OutputMultiset[id].Add(v.Name, aggValue);
-                            }
-                            catch
-                            {
-                                //Ignore errors here, they just result in an unbound for the variable
-                                context.OutputMultiset[id].Add(v.Name, null);
-                            }
-                        }
-                        context.Binder.SetGroupContext(false);
-                    }
-                    else
-                    {
-                        try
-                        {
-                            INode aggValue = v.Aggregate.Apply(context, context.InputMultiset.SetIDs);
-                            aggSet.Add(v.Name, aggValue);
-                        }
-                        catch
-                        {
-                            //Ignore errors here, they just result in an unbound for the variable
-                            aggSet.Add(v.Name, null);
-                        }
-                    }
-                }
-                else if (v.IsProjection)
-                {
-                    if (context.Query != null && context.Query.IsAggregate && context.Query.GroupBy == null)
-                    {
-                        throw new RdfQueryException("Cannot project an expression since this Query contains Aggregates and no GROUP BY");
-                    }
-                    else
-                    {
-                        //Compute the Value of the Projection Expression for each Set
-                        foreach (int id in context.InputMultiset.SetIDs)
-                        {
-                            ISet s = context.InputMultiset[id];
-                            try
-                            {
-                                INode temp = v.Projection.Evaluate(context, id);
-                                s.Add(v.Name, temp);
-                            }
-                            catch (RdfQueryException)
-                            {
-                                s.Add(v.Name, null);
-                            }
-                        }
-                    }
-                }
-                else
-                {
-                    if (context.Query != null && context.Query.IsAggregate && context.Query.GroupBy == null)
-                    {
-                        //If this is an Aggregate without a GROUP BY projected variables are invalid
-                        throw new RdfQueryException("Cannot project the variable ?" + v.Name + " since this Query contains Aggregates and no GROUP BY");
-                    }
-                    else if (context.Query != null && context.Query.IsAggregate && !context.Query.GroupBy.ProjectableVariables.Contains(v.Name))
-                    {
-                        //If this is an Aggregate with a GROUP BY projected variables are only valid if they occur in the GROUP BY
-                        throw new RdfQueryException("Cannot project the variable ?" + v.Name + " since this Query contains Aggregates but the given Variable is not in the GROUP BY - use the SAMPLE aggregate if you need to access this variable");
-                    }
-
-                    //Otherwise we don't need to do anything with the Variable 
-                }
-            }
-
-            if (context.Query != null && context.Query.IsAggregate && context.Query.GroupBy == null)
-            {
-                context.OutputMultiset.Add(aggSet);
-            }
-            else
-            {
-                context.OutputMultiset = context.InputMultiset;
-            }
-
-            return context.OutputMultiset;
-        }
-
-        /// <summary>
-        /// Gets the Variables used in the Algebra
-        /// </summary>
-        public IEnumerable<String> Variables
-        {
-            get
-            {
-                return this._pattern.Variables.Distinct();
-            }
-        }
-
-        /// <summary>
-        /// Gets the Inner Algebra
-        /// </summary>
-        public ISparqlAlgebra InnerAlgebra
-        {
-            get
-            {
-                return this._pattern;
-            }
-        }
-
-        /// <summary>
-        /// Gets the SPARQL Variables used
-        /// </summary>
-        /// <remarks>
-        /// If the Query supplied in the <see cref="SparqlEvaluationContext">SparqlEvaluationContext</see> is non-null then it's Variables are used rather than these
-        /// </remarks>
-        public IEnumerable<SparqlVariable> SparqlVariables
-        {
-            get
-            {
-                return this._variables;
-            }
-        }
-
-        /// <summary>
-        /// Gets the String representation of the Projection
-        /// </summary>
-        /// <returns></returns>
-        public override string ToString()
-        {
-            return "Project(" + this._pattern.ToString() + ")";
-        }
-
-        /// <summary>
-        /// Converts the Algebra back to a SPARQL Query
-        /// </summary>
-        /// <returns></returns>
-        public SparqlQuery ToQuery()
-        {
-            return this._pattern.ToQuery();
-        }
-
-        /// <summary>
-        /// Converts the Algebra to a Graph Pattern
-        /// </summary>
-        /// <returns></returns>
-        /// <exception cref="NotSupportedException">Thrown as this Algebra cannot be converted to a Graph Pattern</exception>
-        public GraphPattern ToGraphPattern()
-        {
-            throw new NotSupportedException("A Project() cannot be converted to a GraphPattern");
-        }
-
-        /// <summary>
-        /// Transforms the Inner Algebra using the given Optimiser
-        /// </summary>
-        /// <param name="optimiser">Optimiser</param>
-        /// <returns></returns>
-        public ISparqlAlgebra Transform(IAlgebraOptimiser optimiser)
-        {
-            return new Project(optimiser.Optimise(this._pattern), this._variables);
-        }
-    }
-
-    /// <summary>
     /// Represents the Selection step of Query Evaluation
     /// </summary>
     /// <remarks>
