@@ -8,7 +8,7 @@ Added
 - Parsing API
  - New ITokenisingParser interface which exposes a TokenQueueMode property (CORE-332)
 - Global Options - new Options.DefaultTokenQueueMode (CORE-332)
-- ConfigurationLoader may now be used in a convinience instance mode (CORE-337)
+- ConfigurationLoader may now be used in a convenience instance mode (CORE-337)
 
 Changed
 - Bug Fixes
@@ -35,6 +35,7 @@ Removed
 - Removed defunct TalisException
 - Removed defunct internal class InternalXmlWriter
 - Marked DydraConnector with an obsolete usable due to continuing inconsistency and transient failures from the Dydra API
+- Removed defunct Project class
 
 
 0.9.0 RC4
